fix increase weight