@@ -6,14 +6,18 @@ import com.example.screenplay.ability.AskNeuralNetwork;
 import com.example.screenplay.action.TrainNeuralNet;
 import com.example.screenplay.question.TheColorLabel;
 import com.example.screenplay.question.TheConfidence;
-import io.vavr.collection.List;
 import lombok.val;
 import net.serenitybdd.junit.runners.SerenityRunner;
 import net.serenitybdd.screenplay.Actor;
 import net.thucydides.core.annotations.Narrative;
 import org.hamcrest.core.StringEndsWith;
+import org.hamcrest.number.IsCloseTo;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import static net.serenitybdd.screenplay.GivenWhenThen.seeThat;
 import static org.hamcrest.CoreMatchers.is;
@@ -38,7 +42,7 @@ public class NeuralNetIT {
   @Test
   public void actorTrainsNeuralNet() {
     double thisIsVeryBlack = 1;
-    val trainingData = List.of(
+    val trainingData = Arrays.asList(
         ColorSet.builder().color(thisIsVeryBlack).label("black").build(),
         ColorSet.builder().color(0.9).label("black").build(),
         ColorSet.builder().color(0.8).label("black").build());
@@ -48,5 +52,21 @@ public class NeuralNetIT {
     actor.attemptsTo(TrainNeuralNet.onDataSet(trainingData));
     double afterTraining = actor.asksFor(TheConfidence.of(thisIsVeryBlack));
     assertThat(beforeTraining, not(is(afterTraining)));
+  }
+
+  @Test
+  public void whenTrainingOnSpecificOutputTheConfidenceGetsVeryHigh() {
+    double thisIsVeryBlack = 1;
+    List<ColorSet> trainingData = new ArrayList<>();
+    for (int i = 0; i < 10000; i++) {
+      trainingData.add(ColorSet.builder().color(thisIsVeryBlack).label("black").build());
+    }
+
+    actor.can(AskNeuralNetwork.forColor(new NeuralNetwork()));
+
+    actor.attemptsTo(TrainNeuralNet.onDataSet(trainingData));
+    double afterTraining = actor.asksFor(TheConfidence.of(thisIsVeryBlack));
+    assertThat(afterTraining, IsCloseTo.closeTo(1., 0.1));
+
   }
 }
